# auris

./: .gitignore  CMakeLists.txt  README.md
docs/: inference-ppd.md  mmu-ppd.md
src/: main.cpp
src/inference/: inf.cpp  inf.h
src/mmu/: db.cpp  db.h  randomizer.py  search.cpp  search.h  vec  vec.cpp  vec.h
